@@ -320,6 +320,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MX370  (EXPERIMENTAL)
        Canon PIXMA MX430  (EXPERIMENTAL)
        Canon PIXMA MX510  (EXPERIMENTAL)
+       Canon PIXMA MX710  (EXPERIMENTAL)
+       Canon PIXMA MX890  (EXPERIMENTAL)
        Canon PIXMA MG2100 (EXPERIMENTAL)
        Canon PIXMA MG3100 (EXPERIMENTAL)
        Canon PIXMA MG4100 (EXPERIMENTAL)
